feat: Implement login functionality

--- a/src/assets/styles/classes/utilities/_size.scss
+++ b/src/assets/styles/classes/utilities/_size.scss
@@ -21,6 +21,10 @@ $spacing-scale: (
   full:100%
 );
 
+.full-width {
+  width: 100%;
+}
+
 @each $key, $value in $spacing-scale {
   .w-#{$key} {
     width: $value !important;
