--- a/src/app/modules/task/components/task-form-modal/task-form-modal.component.html
+++ b/src/app/modules/task/components/task-form-modal/task-form-modal.component.html
@@ -1,1 +1,46 @@
-<p>task-form-modal works!</p>
+<div class="mat-dialog-container">
+  <h2 mat-dialog-title class="text-center mb-2">{{ title() }}</h2>
+
+  <mat-dialog-content class="modal-content">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+
+      <mat-form-field appearance="outline" class="w-full mb-4">
+        <mat-label>Título</mat-label>
+        <input matInput formControlName="title" placeholder="Ingresa el título de la tarea" maxlength="100" required />
+        @if (form.controls.title.hasError('required') && form.controls.title.touched) {
+          <mat-error>El título es requerido</mat-error>
+        } 
+        @if (form.controls.title.hasError('maxlength')) {
+          <mat-error>El título no puede exceder 100 caracteres</mat-error>
+        }
+        <mat-hint class="hint-end">
+          {{ form.controls.title.value.length }} / 100
+        </mat-hint>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="w-full">
+        <mat-label>Descripción</mat-label>
+        <textarea matInput formControlName="description" placeholder="Ingresa la descripción de la tarea" rows="5" maxlength="500" required>
+        </textarea>
+        @if (form.controls.description.hasError('required') && form.controls.description.touched) {
+          <mat-error>La descripción es requerida</mat-error>
+        } 
+        @if (form.controls.description.hasError('maxlength')) {
+          <mat-error>La descripción no puede exceder 500 caracteres</mat-error>
+        }
+        <mat-hint class="hint-end">
+          {{ form.controls.description.value.length }} / 500
+        </mat-hint>
+      </mat-form-field>
+    </form>
+  </mat-dialog-content>
+
+  <mat-dialog-actions class="dialog-actions">
+    <button mat-button (click)="onCancel()" [disabled]="isLoading()">
+      Cancelar
+    </button>
+    <button mat-raised-button type="submit" color="primary" (click)="onSubmit()" [disabled]="isLoading() || form.invalid">
+      {{ submitButtonText() }}
+    </button>
+  </mat-dialog-actions>
+</div>
