--- a/src/app/modules/task/pages/task-list/task-list.component.html
+++ b/src/app/modules/task/pages/task-list/task-list.component.html
@@ -19,31 +19,46 @@
   } @else {
     <table mat-table [dataSource]="tasks()" class="task-table">
 
-      <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef>Título</th>
-        <td mat-cell *matCellDef="let task">{{ task.title }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>Descripción</th>
-        <td mat-cell *matCellDef="let task">{{ task.description }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef>Fecha</th>
-        <td mat-cell *matCellDef="let task">{{ task.createdAt | date:'short' }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="completed">
-        <th mat-header-cell *matHeaderCellDef>Estado</th>
+      <ng-container matColumnDef="checkbox">
+        <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let task">
           <mat-checkbox
             [checked]="task.completed"
             (change)="toggleCompleted(task)"
             color="primary">
-            {{ task.completed ? 'Completada' : 'Pendiente' }}
           </mat-checkbox>
         </td>
+      </ng-container>
+
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef>Título</th>
+        <td mat-cell *matCellDef="let task" [class.completed-task]="task.completed">
+          {{ task.title }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef>Descripción</th>
+        <td mat-cell *matCellDef="let task" [class.completed-task]="task.completed">
+          {{ task.description }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Estado</th>
+        <td mat-cell *matCellDef="let task">
+          <mat-chip 
+            [color]="task.completed ? 'accent' : 'primary'"
+            [class]="task.completed ? 'completed-chip' : 'pending-chip'">
+            <!-- <mat-icon>{{ task.completed ? 'check_circle' : 'schedule' }}</mat-icon> -->
+            {{ task.completed ? 'Completada' : 'Pendiente' }}
+          </mat-chip>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="createdAt">
+        <th mat-header-cell *matHeaderCellDef>Fecha</th>
+        <td mat-cell *matCellDef="let task">{{ task.createdAt | date:'short' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
