--- a/src/app/modules/task/pages/task-list/task-list.component.scss
+++ b/src/app/modules/task/pages/task-list/task-list.component.scss
@@ -56,7 +56,33 @@
   button {
     margin: 0 0.25rem;
   }
+
+  .completed-task {
+    opacity: 0.7;
+    text-decoration: line-through;
+    color: rgba(0, 0, 0, 0.6);
+  }
 }
+
+.completed-chip {
+  background-color: #4caf50 !important;
+  color: white !important;
+  
+  mat-icon {
+    color: white !important;
+  }
+}
+
+.pending-chip {
+  background-color: #ff9800 !important;
+  color: white !important;
+  
+  mat-icon {
+    color: white !important;
+  }
+}
+
+
 
 @media (max-width: 768px) {
   .task-list-header {
